tried to fix horizontal overflow

--- a/web/frontend/css/mclogs.css
+++ b/web/frontend/css/mclogs.css
@@ -7,6 +7,7 @@
 
 html {
     height: 100%;
+    overflow-x: hidden;
     -webkit-text-size-adjust: 100%;
 }
 
